--- a/QPDTask.Api/QPDTask.Api.csproj
+++ b/QPDTask.Api/QPDTask.Api.csproj
@@ -11,4 +11,8 @@
     <PackageReference Include="Microsoft.VisualStudio.Azure.Containers.Tools.Targets" Version="1.19.4" />
   </ItemGroup>
 
+  <ItemGroup>
+    <Folder Include="Models\" />
+  </ItemGroup>
+
 </Project>
